Adds prettier config

--- a/static/index.html
+++ b/static/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>MarcoPolo - Home</title>
 
-<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>MarcoPolo - Home</title>
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="docs/images/favicon.ico"
+    />
 
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://d3js.org/d3-array.v2.min.js"></script>
+    <script src="https://d3js.org/d3-geo.v2.min.js"></script>
+    <script src="./map.js"></script>
+    <script src="./traffic.js"></script>
+  </head>
 
-  <link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
-
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-    }
-  </style>
-  <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="https://d3js.org/d3-array.v2.min.js"></script>
-  <script src="https://d3js.org/d3-geo.v2.min.js"></script>
-  <script src="./map.js"></script>
-  <script src="./traffic.js"></script>
-  
-</head>
-
-<body>
-  <script src="./app.js"></script>
-</body>
-
+  <body>
+    <script src="./app.js"></script>
+  </body>
 </html>
